# Multithreading

./: CMakeLists.txt  README  add_new_thread.sh  appmainprog.c  build.sh
am/: CMakeLists.txt  am.c  am.h  am_cli.c  am_cli.h
cli/: CMakeLists.txt  _cli.h  cli_cmd.c  cli_input.c  cli_parser.c
hellotest/: CMakeLists.txt  hellotest.c  hellotest.h  hellotest_cli.c  hellotest_cli.h
inc/: NvRAMUtils.h  c_net_config.h  common.h  led.h  request.h  u_8516.h  u_acfg.h  u_aee.h  u_aispeech_app.h  u_aispeech_manager.h  u_am.h  u_amb.h  u_app_def.h  u_app_priority.h  u_app_thread.h  u_appman.h  u_assert.h  u_assistant_stub.h  u_bluetooth_audio.h  u_button_sound.h  u_c4a_stub.h  u_cli.h  u_common.h  u_dbg.h  u_dhcpc_api.h  u_dm.h  u_fm.h  u_fw_version.h  u_gpio.h  u_handle.h  u_http_firmware_upgrade.h  u_ipcd.h  u_lnk_list.h  u_mic_in.h  u_misc.h  u_net_common.h  u_net_drv_if.h  u_net_ni_if.h  u_net_oid.h  u_net_util.h  (+20 more)
mw/: CMakeLists.txt  handle.c
mw/dbg_utility/: main.c  makefile  pg_assert.c  pg_exception.c
mw/linux_c_api/: CMakeLists.txt  build.inf.in  c_mt_lx_net_cfg.c  c_mt_lx_net_cli.c  c_mt_lx_net_wrapper.c  config.inf  x_lx_net.c
mw/linux_c_api/net_dbg/: build.inf  netdbg.c
mw/linux_c_api/netinfd/: build.inf  libnetinfd.c  netinfd.h
mw/linux_c_api/netinfd/prog/: build.inf  netinfd.c
mw/os_pthread/: os_pthread_crit.c  os_pthread_msg_q.c  os_pthread_sema.c  os_pthread_thread.c
mw/rwlock/: rwl.h  rwl_api.c  rwl_handle_cb.c
timerd/: CMakeLists.txt  _timer.c  timerd.c  timerd.h  timerd_cli.c  timerd_cli.h
ws/: CMakeLists.txt  ws.c  ws.h  ws_cli.c  ws_cli.h
(+15 files in other folders)
