CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(appmainprog)

#IF(${WIFI_CHIP} MATCHES mt6630)
#	message("mt6630 is defined")
#	ADD_DEFINITIONS(-DEXTER_WIFI_CHIP=1)
#ELSE()
#	message("mt6627 is defined")
#ENDIF()

#ADD_DEFINITIONS(-DCLI_SUPPORT=1 -DHAVE_CONFIG_H)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)
ADD_COMPILE_OPTIONS(-g -Wall -O0 -w -funwind-tables)
ADD_COMPILE_OPTIONS(-lcJSON -lwebsockets -lpthread  -lm -Wl,-rpath=/usr/local/lib)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

AUX_SOURCE_DIRECTORY(. SRCS)
ADD_SUBDIRECTORY(mw)
ADD_SUBDIRECTORY(ws)
ADD_SUBDIRECTORY(am)
ADD_SUBDIRECTORY(cli)
ADD_SUBDIRECTORY(timerd)


INCLUDE_DIRECTORIES(inc)

ADD_EXECUTABLE(appmainprog ${SRCS})
#TARGET_LINK_LIBRARIES(appmainprog  aee amb am mw cli timerd )
TARGET_LINK_LIBRARIES(appmainprog    mw  ws am cli timerd )

