ADD_SUBDIRECTORY(linux_c_api)

INCLUDE_DIRECTORIES(../inc)

AUX_SOURCE_DIRECTORY(. MW)
#AUX_SOURCE_DIRECTORY(dbg_utility DBG_UTILITY)
AUX_SOURCE_DIRECTORY(os_pthread OS_PTHREAD)
AUX_SOURCE_DIRECTORY(rwlock RWLOCK)

#ADD_LIBRARY(mw ${MW} ${DBG_UTILITY} ${OS_PTHREAD} ${RWLOCK})
ADD_LIBRARY(mw ${MW}  ${OS_PTHREAD} ${RWLOCK})
TARGET_LINK_LIBRARIES(mw pthread linux_c_api)
